--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav id="navbar">
       <div class="nav-btn">
-        <a class="btn btn-sm btn-dark" id="buttonInstall" role="button">Install!</a>
+        <button class="btn btn-sm btn-dark" id="buttonInstall" role="button">Install!</button>
       </div>
      <h1> Just Another Text Editor</h1>
      
@@ -29,7 +29,6 @@
             ><img src="./assets/icons/icon_96x96.png"
           /></div>
     </nav>
-
     <main id="main">
       <div class="loading-container">
         <div class="loading-spinner"></div>
